samples/_failures_safe/1761045402_0dfd4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4dd1d37.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_e4dd1d37.c:128:16: error: missing terminating " character
  128 |         printf("Last entry: %s %s %
      |                ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e4dd1d37.c:128:9: error: expected expression at end of input
  128 |         printf("Last entry: %s %s %
      |         ^~~~~~
./samples/SAFE/__tmp_e4dd1d37.c:128:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e4dd1d37.c:128:9: error: expected declaration or statement at end of input
